@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
+  <object class="GtkComboBoxText" id="comboboxtext_privacy">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="active">1</property>
+    <property name="entry_text_column">0</property>
+    <property name="id_column">1</property>
+    <items>
+      <item translatable="yes">Public</item>
+      <item translatable="yes">Friends</item>
+      <item translatable="yes">Only Me</item>
+    </items>
+  </object>
   <object class="GtkFileChooserDialog" id="filechooserdialog1">
     <property name="can_focus">False</property>
     <property name="border_width">5</property>
@@ -74,6 +86,14 @@
       <mime-type>image/jpeg</mime-type>
       <mime-type>image/gif</mime-type>
     </mime-types>
+  </object>
+  <object class="GtkLabel" id="label_num">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="margin_right">8</property>
+    <property name="xalign">1</property>
+    <property name="label">140</property>
+    <property name="width_chars">3</property>
   </object>
   <object class="GtkMenu" id="popupmenu_image">
     <property name="visible">True</property>
@@ -185,6 +205,7 @@
                   <object class="GtkComboBox" id="combobox_account">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <signal name="changed" handler="on_combobox_account_changed" swapped="no"/>
                     <child>
                       <object class="GtkCellRendererPixbuf" id="cellrendererpixbuf_account"/>
                       <attributes>
@@ -258,29 +279,12 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButtonBox" id="buttonbox_tweet">
+              <object class="GtkGrid" id="grid_button">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="margin_left">6</property>
                 <property name="margin_right">6</property>
-                <property name="hexpand">True</property>
-                <property name="spacing">6</property>
-                <property name="layout_style">end</property>
-                <child>
-                  <object class="GtkLabel" id="label_num">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="margin_right">8</property>
-                    <property name="xalign">1</property>
-                    <property name="label">140</property>
-                    <property name="width_chars">3</property>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">True</property>
-                    <property name="position">0</property>
-                  </packing>
-                </child>
+                <property name="column_spacing">6</property>
                 <child>
                   <object class="GtkButton" id="button_tweet">
                     <property name="label" translatable="yes">_Tweet</property>
@@ -293,15 +297,20 @@
                     <signal name="clicked" handler="on_button_tweet_clicked" swapped="no"/>
                   </object>
                   <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">True</property>
-                    <property name="position">1</property>
+                    <property name="left_attach">1</property>
+                    <property name="top_attach">0</property>
+                    <property name="width">1</property>
+                    <property name="height">1</property>
                   </packing>
+                </child>
+                <child>
+                  <placeholder/>
                 </child>
               </object>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
+                <property name="pack_type">end</property>
                 <property name="position">1</property>
               </packing>
             </child>
