@@ -1,3 +1,7 @@
+2012-10-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* updatewindow.py: Added support for Facebook 'Publish'.
+
 2012-10-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* view.py, facebook/*: Added support for Facebook 'Like'.
